# ArmoniK.Bench

./: .gitignore  .gitmodules  README.md  config.example  gen_requirements.py  pyproject.toml  requirements-tests.txt  requirements.txt  ruff.toml  setup-local-env.sh  test_dag.py  variables.env
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
infra/gcp/: backend.tf  common.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
infra/localhost/: backend.tf  entrypoint.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
resources/armonik/: gcp.tfvars.template  localhost.tfvars.template
scripts/: gen_campaign.py  terraform_bootstrap.py
src/airflow/dags/: .airflowignore  run_campaign.py  run_experiment.py  runner.py
src/airflow/dags/notifiers/: notifier.py
src/airflow/dags/operators/: armonik.py  connection.py  connections.py  dump.py  extra_templated.py  run_client.py  run_experiment.py  run_experiments.py  warm_up.py
src/airflow/dags/scripts/: setup.py
src/airflow/dags/utils/: constants.py  filters.py  kubeconfig.py
src/armonik_bench/common/: __init__.py  armonik.py  git.py  kube.py
src/armonik_bench/operators/: armonik.py  run_experiment.py
src/armonik_bench/utils/: compute_instances.py
src/armonik_bench/workflows/: armonik.py  run_experiment.py  runner.py  test.py
templates/notifications/: email_dag_success.html  email_task_failure.html
tests/: conftest.py  contest.py  test_dag_imports.py  test_dag_params.py
tests/airflow/dags/: conftest.py  test_basic.py  test_common.py  test_run_campaign.py  test_run_experiment.py
tests/airflow/dags/operators/: conftest.py  test_connection.py
tests/airflow/operators/: test_connection.py
tests/armonik_bench/: conftest.py  test_version.py
tests/armonik_bench/common/: test_armonik.py  test_git.py  test_kubernetes.py
tests/src/armonik_bench/operators/: test_armonik.py
