[build-system]
requires = ["setuptools",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armonik_bench"
description = "Set of tools for benchmarking performance on ArmoniK."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ArmoniK", "task graph", "benchmarking", "HPC"]
license = {text = "Apache Software License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'armonik>=3.16.1',
    'GitPython',
    'PyYAML',
]

[project.urls]
Homepage = "https://github.com/aneoconsulting/Armonik.Bench"
repository = "https://github.com/aneoconsulting/Armonik.Bench"
"Bug Tracker" = "https://github.com/aneoconsulting/Armonik.Bench/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "armonik_bench.__version__"}
dependencies = { file = ["requirements.in"] }
optional-dependencies.tests = { file = ["requirements-tests.txt"] }
optional-dependencies.airflow = { file = ["requirements-airflow.txt"] }

[tool.setuptools.packages.find]
where= ["src"]
exclude=['tests']

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[project.optional-dependencies]
dev = [
    'mypy',
    'ruff',
    'graphviz',
]
tests = [
    'coverage',
    'kubernetes',
    'pytest',
    'pytest-cov',
    'pytest-benchmark[histogram]',
    'pytest-mock',
]
airflow = [
    'apache-airflow[amazon,google]==2.7.3',
    'apache-airflow-providers-cncf-kubernetes>=8.1.0',
    'apache-airflow-providers-github',
    'apache-airflow-providers-grpc',
    'armonik_analytics',
]
